animation overflow fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hiden !;
+  overflow-x: hidden;
 }
 
 .container {
@@ -341,6 +341,64 @@ body {
   transition: all 0.5s ease;
 }
 
+.footer-button-white {
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  display: inline-flex;
+  align-items: center;
+  background: white;
+  color: rgb(0, 0, 0);
+  border: none;
+  padding: 20px 20px;
+  border-radius: 50px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.who-we-are-button {
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  display: inline-flex;
+  align-items: center;
+  background: white;
+  color: rgb(0, 0, 0);
+  border: none;
+  padding: 20px 20px;
+  border-radius: 50px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.who-we-are-button:hover .arrow-container img {
+  content: url("/images/homePage/arrow.svg");
+}
+
+.who-we-are-button:hover {
+  color: white;
+  transform: scale(1.05);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(
+    123.7deg,
+    #3a6fb5 -4.44%,
+    rgba(58, 110, 181, 0.95) 50.05%,
+    #007743 100%
+  );
+}
+
+.footer-button-white:hover {
+  transform: scale(1.05);
+  color: white;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(
+    123.7deg,
+    #3a6fb5 -4.44%,
+    rgba(58, 110, 181, 0.95) 50.05%,
+    #007743 100%
+  );
+}
+.footer-button-white:hover .arrow-container img {
+  content: url("/images/homePage/arrow.svg") !important;
+}
 .custom-button:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -794,8 +852,6 @@ first-box {
 .card[data-order="4"] .card-description {
   font-size: 0.8rem;
 }
-
-
 
 @media (max-width: 1023px) and (min-width: 768px) {
   .strategic-container {
@@ -1399,6 +1455,14 @@ footer {
     font-size: 20px;
     padding: 15px 15px;
   }
+  .footer-button-white {
+    font-size: 20px;
+    padding: 15px 15px;
+  }
+  .who-we-are-button {
+    font-size: 20px;
+    padding: 15px 15px;
+  }
   .who-we-are {
     z-index: -1;
   }
@@ -1662,6 +1726,14 @@ footer {
     line-height: 24px;
   }
   .custom-button {
+    padding: 10px 20px;
+    font-size: 14px;
+  }
+  .who-we-are-button {
+    padding: 10px 20px;
+    font-size: 14px;
+  }
+  .footer-button-white {
     padding: 10px 20px;
     font-size: 14px;
   }
